avutil/wchar_filename: Make the header C++ compatible

When compiling decklink, this header is included from
a C++ file (albeit inside 'extern "C"') and this
causes compilation failures because of an implicit
void* -> char* conversion. So add an explicit cast.
Fixes ticket #9819.

Reviewed-by: Martin Storsjö <martin@martin.st>
Change-Id: I5fac861c564a1962aa458cf735c89ae949103a42
Signed-off-by: Andreas Rheinhardt <andreas.rheinhardt@outlook.com>