libavutil/wchar_filename.h
@@ -54,7 +54,7 @@ static inline int wchartocp(unsigned int code_page, const wchar_t *filename_w,
         *filename = NULL;
         return 0;
     }
-    *filename = av_malloc_array(num_chars, sizeof *filename);
+    *filename = (char*)av_malloc_array(num_chars, sizeof *filename);
     if (!*filename) {
         errno = ENOMEM;
         return -1;
